Boolean_set_operations_2/demo/Boolean_set_operations_2/errors/typedef Rep<Linear_GI, Linear_polygon_set> Base 26-5 
In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseRegionGraphicsItem.h:25:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseSetGraphicsItem.h:26,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/CircularPolygons.h:27,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:59:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseBoundaryGraphicsItem.h: In instantiation of ‘class CGAL::Qt::Piecewise_boundary_graphics_item<CGAL::Polygon_2<Gps_linear_kernel, std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >, std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseRegionGraphicsItem.h:32:7:   required from ‘class CGAL::Qt::Piecewise_region_graphics_item<CGAL::Polygon_with_holes_2<Gps_linear_kernel, std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >, std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseSetGraphicsItem.h:52:7:   required from ‘class CGAL::Qt::Piecewise_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/LinearPolygons.h:138:7:   required from ‘class CGAL::Qt::Linear_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> > >’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:164:15:   required from ‘Rep<GI_, Set_>::Rep() [with GI_ = CGAL::Qt::Linear_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> > >; Set_ = CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> >]’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:286:24:   
required from here
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseBoundaryGraphicsItem.h:38:61: error: no type named ‘Curve_const_iterator’ in ‘CGAL::Qt::Piecewise_boundary_graphics_item<CGAL::Polygon_2<Gps_linear_kernel, std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >, std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>::Piecewise_boundary {aka class CGAL::Polygon_2<Gps_linear_kernel, std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >, std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >}’
   typedef typename Piecewise_boundary::Curve_const_iterator Curve_piece_const_iterator ;
                                                             ^
CMakeFiles/Boolean_set_operations_2.dir/build.make:154: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o' failed

